<resources>
    <string name="app_name">My Application</string>
    <string name="user">User name</string>
    <string name="pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="new_acc">Register new user...</string>
    <string name="forget_pass">Forget password</string>
    <string name="email">Email</string>
    <string name="reg_btn">Register</string>
    <string name="allready_acc">have an account ?</string>
    <string name="pro_add">Add Product</string>
</resources>
