<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_background"
        android:layout_marginBottom="30dp"
        />
    <EditText
        android:textAlignment="center"
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:inputType="textEmailAddress"
        android:hint="@string/user"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:textAlignment="center"
        android:id="@+id/log_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:hint="@string/pass"
        android:padding="10dp"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:id="@+id/log_btn"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@color/colorAccent"/>
    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        android:textAllCaps="false"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/new_acc"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/new_acc"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

</LinearLayout>