<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EEEEEE"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EEEEEE"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="#EEEEEE"
        android:hint="@string/pass"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center" />


    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/reg_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/all_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/allready_acc"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>