<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_launcher_background"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pro_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pro_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/pass"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="120dp" />

        <TextView
            android:id="@+id/pro_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/pro_add"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>